--- a/index.html
+++ b/index.html
@@ -2,9 +2,5 @@
 layout: page
 title: "Testing"
 ---
+{% include bio.md %}
 
-{% if site.show_excerpts %}
-  {% include home.html %}
-{% else %}
-  {% include archive.html title="Posts" %}
-{% endif %}
